--- a/giveaway/src/scss/home-page/_steps.scss
+++ b/giveaway/src/scss/home-page/_steps.scss
@@ -3,6 +3,12 @@
 .steps__section {
   width: 100%;
   height: 100%;
+  .step__button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 6rem;
+  }
   .steps__text {
     padding-top: 4rem;
     font-size: 2.4rem;
