--- a/giveaway/src/scss/settings/_colors.scss
+++ b/giveaway/src/scss/settings/_colors.scss
@@ -6,4 +6,5 @@ $color-medium-grey: #707070;
 $color-dark-green: #5E5322;
 $color-black: #000000;
 $color-white: #FFFFFF;
+$color-strong-light-grey: #3C3C3C26;
 $color-background-grey: #F0F1F1;
