--- a/giveaway/src/scss/home-page/_header.scss
+++ b/giveaway/src/scss/home-page/_header.scss
@@ -39,6 +39,7 @@
 
     &:hover {
       border: 0.75px solid $color-base-yellow;
+      transition: 0.4s;
     }
   }
 
@@ -54,6 +55,7 @@
 
     &:hover {
       border: 0.75px solid $color-light-grey;
+      transition: 0.4s;
     }
   }
 }
