--- a/giveaway/src/scss/home-page/_about.scss
+++ b/giveaway/src/scss/home-page/_about.scss
@@ -17,11 +17,14 @@
     max-width: 40rem;
     margin-left: 8rem;
 
-    h1 {
+    h2 {
       font-size: 2.4rem;
+      text-align: center;
+      margin-bottom: 1.5rem;
     }
 
     p {
+      margin-top: 1.5rem;
       font-size: 1.9rem;
       text-align: center;
       line-height: 3rem;
