--- a/giveaway/src/scss/home-page/_button.scss
+++ b/giveaway/src/scss/home-page/_button.scss
@@ -1,7 +1,7 @@
 @import "../main";
 
 .btn {
-  font-size: 2.25rem;
+  font-size: 2rem;
   text-align: center;
   padding: 1rem 2rem;
   border: 0.75px solid $color-base-font;
@@ -10,4 +10,8 @@
   max-width: 18rem;
   margin: 3rem 1rem 0 1rem;
   text-transform: uppercase;
+  text-decoration: none;
+  color: $color-base-font;
+  white-space: normal;
+  word-wrap: break-word;
 }
