--- a/giveaway/src/scss/home-page/_steps.scss
+++ b/giveaway/src/scss/home-page/_steps.scss
@@ -3,6 +3,49 @@
 .steps__section {
   width: 100%;
   height: 100%;
+  .title {
+    margin-bottom: 1.5rem;
+    h2{
+      padding: 0.5rem;
+    }
+  }
+  .steps__icon {
+    padding: 5em;
+    display: flex;
+    justify-content: space-around;
+  }
+    .step {
+      color: $color-medium-grey;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 0.3em;
+      .step__img {
+        margin-bottom: 0.3em;
+      }
+      .step__title {
+        max-width: 7rem;
+        text-align: center;
+        font-size: 1.1rem;
+        margin-bottom: 0.3em;
+        padding: 0.3rem 4rem;
+        line-height: 1.5rem;
+      }
+      .steps__text {
+        max-width: 10rem;
+        text-align: center;
+        margin-bottom: 2rem;
+        h2 {
+          margin-bottom: 2rem;
+        }
+      }
+      .step__deco {
+        width: 4.375rem;
+        border: 1px solid $color-light-grey;
+        margin-bottom: 0.3em;
+      }
+  }
   .step__button{
     display: flex;
     justify-content: center;
@@ -13,8 +56,8 @@
     padding-top: 4rem;
     font-size: 2.4rem;
     text-align: center;
-    img{
-      padding: 2rem;
+    .step__img{
+      margin-bottom: 0.3rem;
   }
   }
   .steps__icon {
