--- a/giveaway/src/scss/home-page/_footer.scss
+++ b/giveaway/src/scss/home-page/_footer.scss
@@ -1,19 +1,20 @@
 @import "../main";
 
 footer {
-  margin-top: 2em;
-  padding-bottom: 1.5rem;
+  //margin-top: 2em;
+  //padding-bottom: 1.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   position: relative;
   .footer__icons {
+    margin-bottom: 1rem;
     position: absolute;
     right: 5%;
   }
   .footer__text {
-    position: absolute;
+    margin-top: 0.5rem;
     text-align: center;
     font-size: 1.1rem;
     line-height: 1.5rem;
