--- a/giveaway/src/scss/home-page/_header.scss
+++ b/giveaway/src/scss/home-page/_header.scss
@@ -3,77 +3,108 @@
 .header {
   background-image: url("../../assets/home-hero-image.jpg");
   background-repeat: no-repeat;
-  background-position: -29rem 0.1rem;
-}
+  background-position: -29rem 0;
 
-.header__container {
-  display: inline-block;
-  width: 100%;
-  min-height: 60rem;
-
-  .login__container {
-    display: flex;
-    justify-content: flex-end;
-    margin: 0.625rem 6rem 0 2rem;
-    font-size: 0.9rem;
-    color: $color-light-grey;
-
+  .header__container {
+    width: 100%;
+    min-height: 60rem;
   }
-
-  .menu__container {
+  .nav {
     display: flex;
-    justify-content: flex-end;
-    margin: 0.625rem 6rem 0 2rem;
-    font-size: 1.1rem;
-    color: $color-base-font;
-  }
+    flex-direction: column;
+    gap: 1em;
+    margin: 2rem 6rem 0 2rem;
+    .login__bar {
+      font-size: 0.9rem;
+      display: flex;
+      justify-content: flex-end;
+      .login__bar-item {
+        padding: 0.3em;
+        cursor: pointer;
+        a {
+          padding: 5px 10px;
+          text-decoration: none;
+          color: $color-light-grey;
+          &:hover {
+            border-bottom: 0.5px solid $color-base-yellow;
+            transition: 0.2s;
+          }
+        }
+      }
+    }
 
-  .menu__link-log {
-    padding: 1rem 0.5rem 0.5rem 1rem;
-    text-decoration: none;
-    color: $color-base-font;
-    min-width: 5.5rem;
-    min-height: 1.5rem;
-    text-align: center;
-    border: 0.75px solid transparent;
+    .navbar {
+      display: flex;
+      justify-content: flex-end;
+      font-size: 1.12rem;
+      color: $color-base-font;
+      margin-left: 0.5rem;
+      .navbar__item {
+        border: 0.75px solid transparent;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+        &:hover {
+          border: 0.75px solid $color-base-yellow;
+          transition: 0.4s;
+        }
+        &:first-child {
+          border: 0.75px solid $color-base-font;
+          &:hover {
+            border: 0.75px solid $color-base-yellow;
+            transition: 0.3s;
+          }
+        }
+      }
+    }
 
-    &:hover {
-      border: 0.75px solid $color-base-yellow;
-      transition: 0.4s;
+    .menu__link-log {
+      padding: 1rem 0.5rem 0.5rem 1rem;
+      text-decoration: none;
+      color: $color-base-font;
+      min-width: 5.5rem;
+      min-height: 1.5rem;
+      text-align: center;
+      border: 0.75px solid transparent;
+
+      &:hover {
+        border: 0.75px solid $color-base-yellow;
+        transition: 0.4s;
+      }
+    }
+
+    .menu__link {
+      padding: 1rem 0.5rem 0.5rem 1rem;
+      margin-left: 2rem;
+      text-decoration: none;
+      color: $color-base-font;
+      min-width: 5rem;
+      min-height: 1.5rem;
+      text-align: center;
+      border: 0.75px solid transparent;
+
+      &:hover {
+        border: 0.75px solid $color-light-grey;
+        transition: 0.4s;
+      }
     }
   }
 
-  .menu__link {
-    padding: 1rem 0.5rem 0.5rem 1rem;
-    margin-left: 2rem;
-    text-decoration: none;
-    color: $color-base-font;
-    min-width: 5rem;
-    min-height: 1.5rem;
+  .hero__container {
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    justify-content: flex-end;
     text-align: center;
-    border: 0.75px solid transparent;
+    position: relative;
 
-    &:hover {
-      border: 0.75px solid $color-light-grey;
-      transition: 0.4s;
+    .hero__text {
+      display: inline-block;
+      z-index: 10;
+      font-size: 2.4rem;
+      letter-spacing: 0.2px;
+      line-height: 3.5rem;
+      margin-top: 12rem;
+      margin-right: 17rem;
     }
   }
-}
-.hero__container {
-  width: 100%;
-  height: 85vh;
-  display: flex;
-  justify-content: flex-end;
-  text-align: center;
-  position: relative;
-  .hero__text {
-    display: inline-block;
-    z-index: 10;
-    font-size: 2.4rem;
-    letter-spacing: 0.2px;
-    line-height: 3.5rem;
-    margin-top: 12rem;
-    margin-right: 17rem;
-  }
-
 }
