--- a/giveaway/src/scss/home-page/_header.scss
+++ b/giveaway/src/scss/home-page/_header.scss
@@ -51,7 +51,7 @@
         cursor: pointer;
 
         &:hover {
-          border: 0.75px solid $color-base-yellow;
+          color: $color-base-yellow;
           transition: 0.4s;
         }
 
@@ -65,38 +65,6 @@
         }
       }
     }
-
-    .menu__link-log {
-      padding: 1rem 0.5rem 0.5rem 1rem;
-      text-decoration: none;
-      color: $color-base-font;
-      min-width: 5.5rem;
-      min-height: 1.5rem;
-      text-align: center;
-      border: 0.75px solid transparent;
-
-      &:hover {
-        border: 0.75px solid $color-base-yellow;
-        transition: 0.4s;
-      }
-    }
-
-    .menu__link {
-      padding: 1rem 0.5rem 0.5rem 1rem;
-      margin-left: 2rem;
-      text-decoration: none;
-      color: $color-base-font;
-      min-width: 5rem;
-      min-height: 1.5rem;
-      text-align: center;
-      border: 0.75px solid transparent;
-
-      &:hover {
-        border: 0.75px solid $color-light-grey;
-        transition: 0.4s;
-      }
-    }
   }
 }
-
 
