--- a/giveaway/src/scss/login-page/_login.scss
+++ b/giveaway/src/scss/login-page/_login.scss
@@ -1,1 +1,92 @@
 @import "../main";
+.login__section {
+  width: 100%;
+  min-height: 60rem;
+
+  .login__bar {
+    margin: 2rem 6rem 1rem 2rem;
+    font-size: 0.9rem;
+    display: flex;
+    justify-content: flex-end;
+
+    .login__bar-item {
+      padding: 0.3em;
+      cursor: pointer;
+
+      a {
+        padding: 5px 10px;
+        text-decoration: none;
+        color: $color-light-grey;
+
+        &:hover {
+          border-bottom: 0.5px solid $color-base-yellow;
+          transition: 0.2s;
+        }
+      }
+    }
+  }
+
+  .navbar {
+    margin: 2rem 6rem 1rem 2rem;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 1.12rem;
+    color: $color-base-font;
+    margin-left: 0.5rem;
+
+    .navbar__item {
+      border: 0.75px solid transparent;
+      padding: 0.5rem 1rem;
+      cursor: pointer;
+
+      &:hover {
+        color: $color-base-yellow;
+        transition: 0.4s;
+      }
+
+      &:first-child {
+        border: 0.75px solid $color-base-font;
+
+        &:hover {
+          border: 0.75px solid $color-base-yellow;
+          transition: 0.3s;
+        }
+      }
+    }
+  }
+}
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 6rem;
+  .login__container{
+    margin-top: 2rem;
+    background-color: $color-background-grey;
+    padding: 3rem 5.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    label {
+      font-size: 1rem;
+      width: 100%;
+      margin-bottom: 1rem;
+      margin-top: 0.5rem;
+      text-align: left;
+      outline: none;
+    }
+    input {
+      border: none;
+      background-color: $color-background-grey;
+      border-bottom: 1px solid $color-base-font;
+    }
+  }
+  .btn__container {
+    width: 40%;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2rem;
+  }
+}
