--- a/giveaway/src/scss/login-page/_login.scss
+++ b/giveaway/src/scss/login-page/_login.scss
@@ -5,7 +5,7 @@
 
   .login__bar {
     margin: 2rem 6rem 1rem 2rem;
-    font-size: 0.9rem;
+    font-size: 0.9em;
     display: flex;
     justify-content: flex-end;
 
@@ -27,12 +27,11 @@
   }
 
   .navbar {
-    margin: 2rem 6rem 7rem 2rem;
+    margin: 0 6rem 7rem 2rem;
     display: flex;
     justify-content: flex-end;
     font-size: 1.12rem;
     color: $color-base-font;
-    margin-left: 0.5rem;
 
     .navbar__item {
       border: 0.75px solid transparent;
