--- a/giveaway/src/scss/home-page/_hero.scss
+++ b/giveaway/src/scss/home-page/_hero.scss
@@ -1,8 +1,10 @@
 @import "../main";
-
+.hero__buttons {
+  display: flex;
+}
 .hero__container {
   width: 100%;
-  height: 85vh;
+  height: 100%;
   display: flex;
   justify-content: flex-end;
   text-align: center;
